# dueam

./: LICENSE  README.md  package.json  plan.md  vite.config.ts
.aiassistant/rules/: commits.md
docs/: architecture.md
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 04_normalize_dates.sql  05_fix_email_unique_constraint.sql  07_settings.sql  08_sender_enrichment.sql  09_add_headquarters_to_domains.sql  11_add_ai_timestamp_to_senders.sql  12_add_thread_id.sql  13_add_references.sql  14_add_normalized_subject.sql  15_optimize_threading_backlog.sql  17_add_ai_sender_enrichment_setting.sql  18_add_email_summarization.sql  23_add_notifications_and_dev_mode_settings.sql  24_rename_dev_mode_to_sync_limit.sql  25_add_sync_months_to_initial_sync.sql
src-tauri/overrides/email-lib/: .cargo_vcs_info.json  Cargo.toml
src-tauri/overrides/email-lib/src/account/config/: oauth2.rs
src-tauri/overrides/email-lib/src/email/envelope/: mod.rs
src-tauri/overrides/email-lib/src/imap/: config.rs  error.rs  mod.rs
src-tauri/overrides/email-lib/src/smtp/: mod.rs
src-tauri/overrides/email-lib/src/sync/: mod.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs  settings.rs
src-tauri/src/email_backend/: mod.rs
src-tauri/src/email_backend/accounts/: commands.rs  google.rs  imap_smtp.rs  manager.rs  microsoft.rs  mod.rs
src-tauri/src/email_backend/emails/: commands.rs
src-tauri/src/email_backend/enrichment/: commands.rs  mod.rs  people.rs  providers.rs  types.rs
src-tauri/src/email_backend/llm/: mod.rs  summarization.rs
src-tauri/src/email_backend/sync/: engine.rs  worker.rs
src-tauri/src/utils/: security.rs
src/components/: app-sidebar.test.tsx  app-sidebar.tsx  sender-avatar.tsx
src/components/email-composer/: composer-footer.tsx  composer-header.tsx  email-composer.tsx  icons.tsx  menu-bar.tsx  recipient-fields.tsx
src/components/settings/: ai-settings.tsx  sync-settings.tsx  theme-settings.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx
src/hooks/: use-emails.ts  use-global-events.ts  use-sender-info.ts
src/lib/: settings-store.ts  store.ts
src/routes/: __root.tsx  _inbox.test.tsx  _inbox.tsx  index.tsx  onboarding.test.tsx  onboarding.tsx  settings.tsx
src/routes/_inbox/: email.$emailId.test.tsx  email.$emailId.tsx  index.tsx
src/routes/_inbox/-components/: attachments-list.tsx  email-list-actions.tsx  email-list-item.tsx  email-list-toolbar.tsx  sender-sidebar.tsx  thread-message.tsx  toolbar-actions.tsx
src/routes/accounts/: new-account.tsx  new-imap.tsx  new.tsx
src/routes/accounts/-components/: account-type-card.tsx
src/test/: setup.ts
src/test/routes/: _inbox.test.tsx  onboarding.test.tsx
src/test/routes/_inbox/: email.$emailId.test.tsx
