[package]
name = "dream-email"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dream_email_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
email-lib = { version = "0.26.4", features = ["full"] }
log = "0.4.28"
tokio = "1.48.0"
oauth-lib = "2.0.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
keyring = "3"
rand = "0.8"
hex = "0.4"
tauri-plugin-log = "2"
chacha20poly1305 = "0.10.1"



[patch.crates-io]
#└── imap-client v0.2.3
#    └── email-lib v0.26.4
# this is still dependent on a old (0.4.0) version of this package which has conflicts
imap-client = { path = "./overrides/imap-client" }
email-lib = { path = "./overrides/email-lib" }
