[package]
name = "dream-email"
version = "0.1.0"
description = "A modern, high-performance desktop email client."
authors = ["Shashi Srinath <atshashisrinath@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dream_email_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "rustls-tls", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
email-lib = { version = "0.26.4", features = ["full"] }
imap-client = { version = "0.2.3", path = "./overrides/imap-client" }
langchain-rust = { version = "4.6.0" }
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
oauth-lib = "2.0.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
keyring = "3"
rand = "0.8"
hex = "0.4"
tauri-plugin-log = "2"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
secret = { version = "1.0.0", package = "secret-lib" }
md5 = "0.8.0"
sha2 = "0.10.9"
url = "2.5.7"
base64 = "0.22.1"
mail-parser = "0.9.0"
async-trait = "0.1.89"
addr = "0.15.6"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]

#└── imap-client v0.2.3
#    └── email-lib v0.26.4
# this is still dependent on a old (0.4.0) version of this package which has conflicts
imap-client = { path = "./overrides/imap-client" }
email-lib = { path = "./overrides/email-lib" }
